// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`every-friday-in-july-and-august-at-midnight 1`] = `
Cron {
  "cron": "0 0 * jul,aug fri",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    5,
  ],
  "hours": Array [
    0,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    7,
    8,
  ],
  "normalized": "0 0 * 7,8 5",
}
`;

exports[`every-friday-in-july-at-midnight 1`] = `
Cron {
  "cron": "0 0 * jul fri",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    5,
  ],
  "hours": Array [
    0,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    7,
  ],
  "normalized": "0 0 * 7 5",
}
`;

exports[`every-minute 1`] = `
Cron {
  "cron": "* * * * *",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
  ],
  "minutes": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "* * * * *",
}
`;

exports[`every-monday-through-friday-at-midnight 1`] = `
Cron {
  "cron": "0 0 * * mon-fri",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    1,
    2,
    3,
    4,
    5,
  ],
  "hours": Array [
    0,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "0 0 * * 1-5",
}
`;

exports[`every-other-day 1`] = `
Cron {
  "cron": "* * */2 * *",
  "days": Array [
    1,
    3,
    5,
    7,
    9,
    11,
    13,
    15,
    17,
    19,
    21,
    23,
    25,
    27,
    29,
    31,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
  ],
  "minutes": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "* * */2 * *",
}
`;

exports[`every-other-day-of-week 1`] = `
Cron {
  "cron": "* * * * */2",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    0,
    2,
    4,
    6,
  ],
  "hours": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
  ],
  "minutes": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "* * * * */2",
}
`;

exports[`every-other-hour 1`] = `
Cron {
  "cron": "* */2 * * *",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
    2,
    4,
    6,
    8,
    10,
    12,
    14,
    16,
    18,
    20,
    22,
  ],
  "minutes": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "* */2 * * *",
}
`;

exports[`every-other-minute 1`] = `
Cron {
  "cron": "*/2 * * * *",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
  ],
  "minutes": Array [
    0,
    2,
    4,
    6,
    8,
    10,
    12,
    14,
    16,
    18,
    20,
    22,
    24,
    26,
    28,
    30,
    32,
    34,
    36,
    38,
    40,
    42,
    44,
    46,
    48,
    50,
    52,
    54,
    56,
    58,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "*/2 * * * *",
}
`;

exports[`every-other-month 1`] = `
Cron {
  "cron": "* * * */2 *",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
  ],
  "minutes": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
    42,
    43,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    58,
    59,
  ],
  "months": Array [
    1,
    3,
    5,
    7,
    9,
    11,
  ],
  "normalized": "* * * */2 *",
}
`;

exports[`pre-defined-@annually 1`] = `
Cron {
  "cron": "@annually",
  "days": Array [
    1,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    1,
  ],
  "normalized": "0 0 1 1 *",
}
`;

exports[`pre-defined-@daily 1`] = `
Cron {
  "cron": "@daily",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "0 0 * * *",
}
`;

exports[`pre-defined-@hourly 1`] = `
Cron {
  "cron": "@hourly",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "0 * * * *",
}
`;

exports[`pre-defined-@monthly 1`] = `
Cron {
  "cron": "@monthly",
  "days": Array [
    1,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "0 0 1 * *",
}
`;

exports[`pre-defined-@weekly 1`] = `
Cron {
  "cron": "@weekly",
  "days": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
  ],
  "dows": Array [
    0,
  ],
  "hours": Array [
    0,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ],
  "normalized": "0 0 * * 0",
}
`;

exports[`pre-defined-@yearly 1`] = `
Cron {
  "cron": "@yearly",
  "days": Array [
    1,
  ],
  "dows": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "hours": Array [
    0,
  ],
  "minutes": Array [
    0,
  ],
  "months": Array [
    1,
  ],
  "normalized": "0 0 1 1 *",
}
`;

exports[`toString-is-cron 1`] = `"* * * * mon-fri"`;

exports[`valueOf-is-normalized 1`] = `"* * * * 1-5"`;
